# team5-wed-fall25

./: .coverage  .coveragerc  .ebignore  .env.example  .flake8  .gitignore  .travis.yml  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  MESSAGING_INTEGRATION.md  Procfile  README.md  campusnest_rds_dump.backup  check_s3_images.py  check_storage.py  db.sqlite3  db.sqlite3.backup_20251204_131221  fix_indentation.py  fix_tests.py  manage.py  pyproject.toml  rds_data.json  refactor_continuation.md  requirements.txt  test_production.py  test_s3_connection.py
.ebextensions/: django.config  nginx.config
.elasticbeanstalk/: config.yml
CampusNest/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  auth_urls.py  authentication.py  forms.py  models.py  tests.py  urls.py  views.py
campusnest-venv/: pyvenv.cfg
chat/: admin.py  models.py  urls.py  views.py
communities/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  utils.py  views.py
feed/: admin.py  models.py  tests.py  urls.py  views.py
listings/: constants.py  forms.py  models.py  tests.py  urls.py  views.py  widgets.py
map_utils/: __init__.py
marketplace/: constants.py  forms.py  models.py  tests.py  urls.py  views.py
messaging/: admin.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
profiles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reference/: DATABASE_SCHEMA.md  MESSAGING_ENHANCEMENTS.md  REFACTORING_DOCUMENTATION.md  S3_INTEGRATION.md  STATIC_FILES_REFACTORING.md  UNREAD_MESSAGE_BADGE.md
(+183 files in other folders)
