[project]
name = "team5-wed-fall25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
]
